hard-gists/6d6bb834d48b9664b38d/run.log
=== Docker Run Log for 6d6bb834d48b9664b38d ===
Started at: Mi 29. Okt 16:50:47 CET 2025

[2025-10-29 16:50:48] START: Running container for 6d6bb834d48b9664b38d
[2025-10-29 16:50:48] SUCCESS: Container 0a4bb3ecf4f79c88ac3ab5689b0b0edfc8e0c1120f4c1b91de86ad098c025932 started for 6d6bb834d48b9664b38d
=== Container logs for 6d6bb834d48b9664b38d ===
  File "/snippet.py", line 13
    print solution
    ^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6d6bb834d48b9664b38d ===
[2025-10-29 16:50:50] INFO: Container 0a4bb3ecf4f79c88ac3ab5689b0b0edfc8e0c1120f4c1b91de86ad098c025932 has stopped
